<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">The Highness</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_sign_up">SignUp</string>
    <string name="title_activity_dashboard">The Highness</string>
    <string name="title_activity_room_booking">RoomBooking</string>
    <string name="title_activity_table_booking">TableBooking</string>
    <string name="title_activity_hall_booking">HallBooking</string>
    <string name="title_activity_event_booking">EventBooking</string>
    <string name="login_url">http://192.168.8.101/mobile/login.php</string>
    <string name="signup_email_url">http://192.168.8.101/mobile/checkemail.php</string>
    <string name="signup_url">http://192.168.8.101/mobile/signup.php</string>
    <string name="event_vanue_url">http://192.168.8.101/mobile/geteventvanuetype.php</string>
    <string name="event_type_url">http://192.168.8.101/mobile/geteventtype.php</string>
    <string name="event_decor_url">http://192.168.8.101/mobile/geteventdecortype.php</string>
    <string name="event_package_url">http://192.168.8.101/mobile/geteventpackagetype.php</string>
    <string name="room_type_url">http://192.168.8.101/mobile/getroomtype.php</string>
<string name="title_contact">Contact</string>
    <string name="contact_detail1">The Highness Hotel</string>
    <string name="contact_detail2">Address:Opp. Jalaram Temple,	</string>
    <string name="contact_detail21">Nr. ONGC Nagar, Palavasana,</string>
    <string name="contact_detail22">Mehsana - Ahemedabad Highway, Mehsana.</string>
    <string name="contact_detail3">Email: thehighness@hotmail.com</string>
    <string name="contact_detail4">Mobile: +917802006232</string>
    <string name="contact_detail5">Phone: (02762)291077,225477</string>
    <string name="contact_detail6">Room and Party Booking:</string>
    <string name="contact_detail7">Mobile: +919909999552</string>
    <string-array name="hevent">
        <item>Select Hall Type</item>
        <item>Birthday party</item>
        <item>Conference</item>
        <item>Celebration</item>
    </string-array>

    <string name="title_activity_contact_us">ContactUs</string>

</resources>
