<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wbg"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    >

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/title_contact"
        android:textColor="#01dfa5"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView"
        android:layout_marginTop="30dp"
        android:text="@string/contact_detail1"
        android:textColor="#01dfa5"
        android:textSize="15sp" />
    
     <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="5dp"
        android:text="@string/contact_detail2"
        android:textColor="#01dfa5"
        android:textSize="15sp" />
     <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="0dp"
        android:text="@string/contact_detail21"
        android:textColor="#01dfa5"
        android:textSize="15sp" />
     <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView21"
        android:layout_marginTop="0dp"
        android:text="@string/contact_detail22"
        android:textColor="#01dfa5"
        android:textSize="15sp" />
     <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView22"
        android:layout_marginTop="5dp"
        android:text="@string/contact_detail3"
        android:textColor="#01dfa5"
        android:textSize="15sp" />
     <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_marginTop="5dp"
        android:text="@string/contact_detail4"
        android:textColor="#01dfa5"
        android:textSize="15sp" />
  <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView4"
        android:layout_marginTop="5dp"
        android:text="@string/contact_detail5"
        android:textColor="#01dfa5"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView5"
        android:layout_marginTop="5dp"
        android:text="@string/contact_detail6"
        android:textColor="#01dfa5"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView6"
        android:layout_marginTop="5dp"
        android:text="@string/contact_detail6"
        android:textColor="#01dfa5"
        android:textSize="15sp" />
     <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView7"
        android:layout_marginTop="5dp"
        android:text="@string/contact_detail7"
        android:textColor="#01dfa5"
        android:textSize="15sp" />
</RelativeLayout>
